kubernetes/argocd/stacks/common/azure-workload-identity-webhook.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: azure-workload-identity-system
---
