kubernetes/argocd/stacks/common/cert-manager.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
