kubernetes/argocd/stacks/common/hostpath-provisioner.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    # The following labels are required to allow hostpath-provisioner
    # to use additional networking and host-level volume operations.
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
  name: hostpath-provisioner
