kubernetes/argocd/stacks/common/metallb.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    # The following labels are required to allow MetalLB to use
    # additional networking protocols for L2 advertisement.
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
  name: metallb-system
