kubernetes/argocd/stacks/common/pfsense.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kpc
