kubernetes/argocd/stacks/common/nginx-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    my/service: nginx-test
spec:
  containers:
    - name: nginx-pod
      image: docker.io/library/nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
spec:
  type: LoadBalancer
  selector:
    my/service: nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
