kubernetes/argocd/stacks/common/keel.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keelsh
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keelsh
  namespace: keelsh
  annotations:
    external-dns.alpha.kubernetes.io/target: app.acmuic.org
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`keel.acmuic.org`) || Host(`www.keel.acmuic.org`)"
      services:
        - kind: Service
          name: keel
          namespace: keelsh
          passHostHeader: true
          port: keel
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          strategy: RoundRobin
          weight: 10
  tls:
    secretName: keel-tls
