kubernetes/argocd/stacks/common/vault.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`vault.acmuic.org`)
    priority: 10
    services:
    - kind: Service
      name: vault-ui
      namespace: vault
      passHostHeader: true
      port: 8200
      responseForwarding:
        flushInterval: 1ms
      scheme: https
      serversTransport: vaulttransport
      strategy: RoundRobin
      weight: 10
  tls:
    secretName: vault-ha-tls
